Revert "fix(content-group-horizontal): align to non-gutter grid"
This reverts commit 41488bc7

--- a/packages/web-components/.storybook/container.scss
+++ b/packages/web-components/.storybook/container.scss
@@ -78,7 +78,6 @@ body {
 .dds-ce-demo-devenv--simple-grid--card,
 .dds-ce-demo-devenv--simple-grid--card-group,
 .dds-ce-demo-devenv--simple-grid--content-layout,
-.dds-ce-demo-devenv--simple-grid--content-horizontal,
 .dds-ce-demo-devenv--simple-grid--content-layout--with-complementary,
 .dds-ce-demo-devenv--simple-grid--content-block-headlines,
 .dds-ce-demo-devenv--simple-grid--content-section,
@@ -95,7 +94,6 @@ body {
   .dds-ce-demo-devenv--simple-grid--callout,
   .dds-ce-demo-devenv--simple-grid--card-group,
   .dds-ce-demo-devenv--simple-grid--content-layout,
-  .dds-ce-demo-devenv--simple-grid--content-horizontal,
   .dds-ce-demo-devenv--simple-grid--content-layout--with-complementary,
   .dds-ce-demo-devenv--simple-grid--content-section {
     > * {
@@ -116,12 +114,6 @@ body {
   .dds-ce-demo-devenv--simple-grid--content-layout {
     > * {
       grid-column: 5 / span 8;
-    }
-  }
-
-  .dds-ce-demo-devenv--simple-grid--content-horizontal {
-    > * {
-      grid-column: 4 / span 10;
     }
   }
 
